did machine casings section

--- a/docs/blocks/casings/casings.mdx
+++ b/docs/blocks/casings/casings.mdx
@@ -7,6 +7,6 @@ sidebar_position: 9
 
 Machine Casings are used to build multi-block machines
 
-- \<mcitem\>techreborn:basic_machine_casing\</mcitem\>
-- \<mcitem\>techreborn:advanced_machine_casing\</mcitem\>
-- \<mcitem\>techreborn:industrial_machine_casing\</mcitem\>
+- <McItem slug="techreborn:basic_machine_casing"/>
+- <McItem slug="techreborn:advanced_machine_casing"/>
+- <McItem slug="techreborn:industrial_machine_casing"/>
