did the machine frames section

--- a/docs/blocks/frames/frames.mdx
+++ b/docs/blocks/frames/frames.mdx
@@ -7,6 +7,6 @@ sidebar_position: 8
 
 Machine Frames are a crafting ingredient used to build machines
 
-- \<mcitem\>techreborn:basic_machine_frame\</mcitem\>
-- \<mcitem\>techreborn:advanced_machine_frame\</mcitem\>
-- \<mcitem\>techreborn:industrial_machine_frame\</mcitem\>
+- <McItem slug="techreborn:basic_machine_frame"/>
+- <McItem slug="techreborn:advanced_machine_frame"/>
+- <McItem slug="techreborn:industrial_machine_frame"/>
