--- a/docs/blocks/tanks/tanks.mdx
+++ b/docs/blocks/tanks/tanks.mdx
@@ -7,15 +7,15 @@ sidebar_position: 7
 
 **Tanks** are used to store a large quantities of a single fluid.
 
-- \<mcitem\>techreborn:basic_tank_unit\</mcitem\>
-- \<mcitem\>techreborn:advanced_tank_unit\</mcitem\>
-- \<mcitem\>techreborn:industrial_tank_unit\</mcitem\>
-- \<mcitem\>techreborn:quantum_tank_unit\</mcitem\>
-- \<mcitem\>techreborn:creative_tank_unit\</mcitem\>
+- <McItem slug="techreborn:basic_tank_unit"/>
+- <McItem slug="techreborn:advanced_tank_unit"/>
+- <McItem slug="techreborn:industrial_tank_unit"/>
+- <McItem slug="techreborn:quantum_tank_unit"/>
+- <McItem slug="techreborn:creative_tank_unit"/>
 
 ### Usage Notes
 
 - No power required
 - Configurable input/outputs by using side menu (Blue - input, Green - both and Orange - output) for both items and fluid. Click faces to change them. Can also opt for auto input and output(Pull/push).
 - Cells are used to transfer fluids in/out but has support for machines
-- See \<mcitem\>techreborn:drain\</mcitem\> for infinite water generation
+- See <McItem slug="techreborn:drain"/> for infinite water generation
