did storage units

--- a/docs/blocks/item_storage/item_storage.mdx
+++ b/docs/blocks/item_storage/item_storage.mdx
@@ -8,12 +8,12 @@ sidebar_position: 6
 
 **Storage Units** are used to store large quantities of a single item.
 
-- \<mcitem\>techreborn:crude_storage_unit\</mcitem\>
-- \<mcitem\>techreborn:basic_storage_unit\</mcitem\>
-- \<mcitem\>techreborn:advanced_storage_unit\</mcitem\>
-- \<mcitem\>techreborn:industrial_storage_unit\</mcitem\>
-- \<mcitem\>techreborn:quantum_storage_unit\</mcitem\>
-- \<mcitem\>techreborn:creative_storage_unit\</mcitem\>
+- <McItem slug="techreborn:crude_storage_unit"/>
+- <McItem slug="techreborn:basic_storage_unit"/>
+- <McItem slug="techreborn:advanced_storage_unit"/>
+- <McItem slug="techreborn:industrial_storage_unit"/>
+- <McItem slug="techreborn:quantum_storage_unit"/>
+- <McItem slug="techreborn:creative_storage_unit"/>
 
 ## Usage Notes
 
