added all the battery blocks
and upgrade

--- a/docs/blocks/batteries/batteries.mdx
+++ b/docs/blocks/batteries/batteries.mdx
@@ -9,13 +9,13 @@ sidebar_position: 5
 
 Battery blocks are used to store energy and charge items.
 
-- \<mcitem\>techreborn:battery_box\</mcitem\>
-- \<mcitem\>techreborn:MFE\</mcitem\>
-- \<mcitem\>techreborn:MFSU\</mcitem\>
-- \<mcitem\>techreborn:Adjustable_SU\</mcitem\>
-- \<mcitem\>techreborn:Interdimensional_SU\</mcitem\>
-- **[LESU Controller](/energy/batteries/lesu)**
-  - **[LESU Storage](/energy/batteries/lesu_storage)**
+- <McItem slug="techreborn:battery_box"/>
+- <McItem slug="techreborn:mfe" overrides={{name:"MFE"}}/>
+- <McItem slug="techreborn:mfsu" overrides={{name:"MFSU"}}/>
+- <McItem slug="techreborn:aesu" overrides={{name:"AESU"}}/>
+- <McItem slug="techreborn:idsu" overrides={{name:"IDSU"}}/>
+- <McItem slug="techreborn:lesu" overrides={{name:"LESU Controller"}}/>
+- <McItem slug="techreborn:lesu_storage" overrides={{name:"LESU Storage", image:"lesu_block"}}/>
 
 ## Usage Notes
 
@@ -25,4 +25,4 @@ Battery blocks are used to store energy and charge items.
 
 ## Upgrades
 
-- \<mcitem\>techreborn:superconductor_upgrade\</mcitem\>
+- <McItem slug="techreborn:superconductor_upgrade"/>
