--- a/docs/blocks/machines/industrial_grinder.mdx
+++ b/docs/blocks/machines/industrial_grinder.mdx
@@ -65,8 +65,8 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
 | <McItem slug="techreborn:galena_ore" inline={true}/> | <McItem slug="techreborn:mercury_cell" inline={true}/> | 2x<McItem slug="techreborn:galena_dust" inline={true}/> + <McItem slug="techreborn:sulfur_dust" inline={true}/> + <McItem slug="techreborn:raw_silver" inline={true}/> |
 | <McItem slug="techreborn:sphalerite_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/> | 5x<McItem slug="techreborn:sphalerite_dust" inline={true}/> + <McItem slug="techreborn:small_pile_of_yellow_garnet_dust" inline={true}/> + <McItem slug="techreborn:zinc_dust" inline={true}/> |
 | <McItem slug="techreborn:sphalerite_ore" inline={true}/> | <McItem slug="techreborn:sodiumpersulfate_cell" inline={true}/> | 5x<McItem slug="techreborn:sphalerite_dust" inline={true}/> + <McItem slug="techreborn:small_pile_of_yellow_garnet_dust" inline={true}/> + <McItem slug="techreborn:zinc_dust" inline={true}/> |
-| <McItem slug="techreborn:bauxite_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/> | 2x<McItem slug="techreborn:bauxite_dust" inline={true}/> + <McItem slug="techreborn:aluminium_dust" inline={true}/> |
-| <McItem slug="techreborn:sodalite_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/> | 12x<McItem slug="techreborn:sodalite_dust" inline={true}/> + 3x<McItem slug="techreborn:aluminium_dust" inline={true}/> |
+| <McItem slug="techreborn:bauxite_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/> | 2x<McItem slug="techreborn:bauxite_dust" inline={true}/> + <McItem slug="techreborn:aluminum_dust" inline={true}/> |
+| <McItem slug="techreborn:sodalite_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/> | 12x<McItem slug="techreborn:sodalite_dust" inline={true}/> + 3x<McItem slug="techreborn:aluminum_dust" inline={true}/> |
 | <McItem slug="techreborn:pyrite_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/> | 5x<McItem slug="techreborn:pyrite_dust" inline={true}/> + 2x<McItem slug="techreborn:sulfur_dust" inline={true}/> |
 | <McItem slug="techreborn:ruby_ore" inline={true}/>    | <McItem slug="techreborn:water_cell" inline={true}/>    | <McItem slug="techreborn:ruby" inline={true}/> + 6x<McItem slug="techreborn:small_pile_of_ruby_dust" inline={true}/> + 2x<McItem slug="techreborn:small_pile_of_red_garnet_dust" inline={true}/> |
 | <McItem slug="techreborn:sapphire_ore" inline={true}/> | <McItem slug="techreborn:water_cell" inline={true}/>   | <McItem slug="techreborn:sapphire" inline={true}/> + 6x<McItem slug="techreborn:small_pile_of_sapphire_dust" inline={true}/> + 2x<McItem slug="techreborn:small_pile_of_peridot" inline={true}/> |
