--- a/docs/items/batteries/lithium_ion_battery.mdx
+++ b/docs/items/batteries/lithium_ion_battery.mdx
@@ -17,7 +17,7 @@ The **Lithium-Ion Battery** is a portable battery used to charge items. For more
 ```
 <recipe> 
   size 1x2 
-  input techreborn:aluminium_plate,2 
+  input techreborn:aluminum_plate,2 
   input techreborn:lithium_cell,2 
   output techreborn:lithium_ion_battery 
   tool techreborn:assembling_machine 
