--- a/docs/items/dusts/aluminum_dust.mdx
+++ b/docs/items/dusts/aluminum_dust.mdx
@@ -1,8 +1,8 @@
 ---
-title: Aluminium Dust
+title: aluminum Dust
 ---
 
-<ItemImage file="aluminium_dust" alt="Aluminium Dust" size="200" />
+<ItemImage file="aluminum_dust" alt="aluminum Dust" size="200" />
 
 # Aluminum Dust
 
