--- a/docs/items/dusts/clay_dust.mdx
+++ b/docs/items/dusts/clay_dust.mdx
@@ -24,4 +24,4 @@ title: Clay Dust
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 8x <McItem slug="techreborn:clay_dust" inline={true}/> + 5x <McItem slug="techreborn:empty_cell" inline={true}/> →  
 <McItem slug="techreborn:lithium_cell" inline={true}/> + 2x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 2x <McItem slug="techreborn:sodium_cell" inline={true}/>
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 2x <McItem slug="techreborn:sodium_cell" inline={true}/>
