--- a/docs/items/dusts/dusts.mdx
+++ b/docs/items/dusts/dusts.mdx
@@ -11,7 +11,7 @@ Dusts are created mainly by grinding ores or another materials in the <McItem sl
 or <McItem slug="techreborn:industrial_grinder"/>
 
 - <McItem slug="almandine_dust" pack="techreborn"/>
-- <McItem slug="aluminium_dust" pack="techreborn"/>
+- <McItem slug="aluminum_dust" pack="techreborn"/>
 - <McItem slug="amethyst_dust" pack="techreborn"/>
 - <McItem slug="andesite_dust" pack="techreborn"/>
 - <McItem slug="andradite_dust" pack="techreborn"/>
