--- a/docs/items/dusts/lazurite_dust.mdx
+++ b/docs/items/dusts/lazurite_dust.mdx
@@ -30,7 +30,7 @@ title: Lazurite Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 29x <McItem slug="techreborn:lazurite_dust" inline={true}/> + 10x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-3x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
+3x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
 2x <McItem slug="techreborn:calcium_cell" inline={true}/> + 4x <McItem slug="techreborn:sodium_cell" inline={true}/>
 
 <McItem slug="techreborn:compressor" inline={true}/> recipe:  
