--- a/docs/items/dusts/magnesium_dust.mdx
+++ b/docs/items/dusts/magnesium_dust.mdx
@@ -25,7 +25,7 @@ title: Magnesium Dust
   2x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
 - 20x <McItem slug="techreborn:pyrope_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
   3x <McItem slug="techreborn:magnesium_dust" inline={true}/> +  
-  2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+  2x <McItem slug="techreborn:aluminum_dust" inline={true}/> +  
   3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
   6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
 
@@ -33,4 +33,4 @@ title: Magnesium Dust
 
 <CraftingTable recipe="input air air air input air techreborn:magnesium_dust air input air air air output techreborn:small_pile_of_magnesium_dust,4"/>
 
-<recipe> tool techreborn:rolling_machine input techreborn:aluminium_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminium_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot output techreborn:magnalium_plate,3 </recipe>
+<recipe> tool techreborn:rolling_machine input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot output techreborn:magnalium_plate,3 </recipe>
