--- a/docs/items/dusts/pyrope_dust.mdx
+++ b/docs/items/dusts/pyrope_dust.mdx
@@ -23,7 +23,7 @@ title: Pyrope Dust
 **Pyrope Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
 20x <McItem slug="techreborn:pyrope_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
 3x <McItem slug="techreborn:magnesium_dust" inline={true}/> +  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> +  
 3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
 
