--- a/docs/items/dusts/ruby_dust.mdx
+++ b/docs/items/dusts/ruby_dust.mdx
@@ -31,4 +31,4 @@ title: Ruby Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 9x <McItem slug="techreborn:ruby_dust" inline={true}/> + 3x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + <McItem slug="techreborn:chrome_dust" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + <McItem slug="techreborn:chrome_dust" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
