--- a/docs/items/dusts/sapphire_dust.mdx
+++ b/docs/items/dusts/sapphire_dust.mdx
@@ -27,4 +27,4 @@ title: Sapphire Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 8x <McItem slug="techreborn:sapphire_dust" inline={true}/> + 3x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
