--- a/docs/items/dusts/sodalite_dust.mdx
+++ b/docs/items/dusts/sodalite_dust.mdx
@@ -17,7 +17,7 @@ title: Sodalite Dust
 <McItem slug="techreborn:sodalite_ore" inline={true}/> → 2x <McItem slug="techreborn:sodalite_dust" inline={true}/>
 
 <McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
-<McItem slug="techreborn:sodalite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> → 12x <McItem slug="techreborn:sodalite_dust" inline={true}/> + 3x <McItem slug="techreborn:aluminium_dust" inline={true}/>
+<McItem slug="techreborn:sodalite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> → 12x <McItem slug="techreborn:sodalite_dust" inline={true}/> + 3x <McItem slug="techreborn:aluminum_dust" inline={true}/>
 
 ## Usage
 
@@ -26,4 +26,4 @@ title: Sodalite Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 23x <McItem slug="techreborn:sodalite_dust" inline={true}/> + 8x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-4x <McItem slug="techreborn:sodium_cell" inline={true}/> + 3x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + <McItem slug="techreborn:chlorite_cell" inline={true}/>
+4x <McItem slug="techreborn:sodium_cell" inline={true}/> + 3x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + <McItem slug="techreborn:chlorite_cell" inline={true}/>
