--- a/docs/items/dusts/spessartine_dust.mdx
+++ b/docs/items/dusts/spessartine_dust.mdx
@@ -22,7 +22,7 @@ title: Spessartine Dust
 
 **Spessartine Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
 20x <McItem slug="techreborn:spessartine_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> +  
 3x <McItem slug="techreborn:manganese_dust" inline={true}/> +  
 3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
