--- a/docs/items/ingots/ingots.mdx
+++ b/docs/items/ingots/ingots.mdx
@@ -3,12 +3,12 @@ sidebar_position: 10
 title: Ingots
 ---
 
-<ItemImage file="aluminium_ingot" alt="Ingots" size="200" />
+<ItemImage file="aluminum_ingot" alt="Ingots" size="200" />
 
 Ingots are made from either ore or dust, generally smelt in a furnace.
 
 - <McItem slug="advanced_alloy_ingot" pack="techreborn"/> 
-- <McItem slug="aluminium_ingot" pack="techreborn"/> 
+- <McItem slug="aluminum_ingot" pack="techreborn"/> 
 - <McItem slug="brass_ingot" pack="techreborn"/> 
 - <McItem slug="bronze_ingot" pack="techreborn"/> 
 - <McItem slug="chrome_ingot" pack="techreborn"/> 
