--- a/docs/items/nuggets/nuggets.mdx
+++ b/docs/items/nuggets/nuggets.mdx
@@ -3,10 +3,10 @@ sidebar_position: 9
 title: Nuggets
 ---
 
-<ItemImage file="aluminium_nugget" alt="Nuggets" size="200" />
+<ItemImage file="aluminum_nugget" alt="Nuggets" size="200" />
 
 
-- <McItem slug="aluminium_nugget" pack="techreborn"/> 
+- <McItem slug="aluminum_nugget" pack="techreborn"/> 
 - <McItem slug="brass_nugget" pack="techreborn"/> 
 - <McItem slug="bronze_nugget" pack="techreborn"/> 
 - <McItem slug="chrome_nugget" pack="techreborn"/> 
