--- a/docs/items/plates/plates.mdx
+++ b/docs/items/plates/plates.mdx
@@ -3,7 +3,7 @@ sidebar_position: 11
 title: Plates
 ---
 
-<ItemImage file="aluminium_plate" alt="Plates" size="200" />
+<ItemImage file="aluminum_plate" alt="Plates" size="200" />
 
 Plates are made from corresponding materials, like [**Ingots**](/docs/items/ingots)
 or [**Carbon Mesh**](/docs/items/part/carbon_mesh) in [**Compressor**](/blocks/compressor). 
@@ -11,7 +11,7 @@ or [**Carbon Mesh**](/docs/items/part/carbon_mesh) in [**Compressor**](/blocks/c
 Plates serve as parts for different machines.
 
 ```
-- ![Aluminium Plate](/media/mods/techreborn/aluminum_plate.png){width="24" query="?nolink&24"} **[Aluminum Plate](/items/plate/aluminum_plate)**
+- ![aluminum Plate](/media/mods/techreborn/aluminum_plate.png){width="24" query="?nolink&24"} **[Aluminum Plate](/items/plate/aluminum_plate)**
 - ![Brass Plate](/media/mods/techreborn/brass_plate.png){width="24" query="?nolink&24"} **[Brass Plate](/items/plate/brass_plate)**
 - ![Bronze Plate](/media/mods/techreborn/bronze_plate.png){width="24" query="?nolink&24"} **[Bronze Plate](/items/plate/bronze_plate)**
 - ![Carbon Plate](/media/mods/techreborn/carbon_plate.png){width="24" query="?nolink&24"} **[Carbon Plate](/items/plate/carbon_plate)**
