--- a/docs/world/ores/bauxite.mdx
+++ b/docs/world/ores/bauxite.mdx
@@ -19,4 +19,4 @@ There are no crafting recipe for **Bauxite Ore**. It is generated naturally in T
 #### Industrial Grinder
 
 Input: 1000 Units \<mcitem\>minecraft:water\</mcitem\>, \<mcitem\>techreborn:bauxite_ore\</mcitem\>\
-Output: 4x \<mcitem\>techreborn:bauxite_dust\</mcitem\>, 1x \<mcitem\>techreborn:aluminium_dust\</mcitem\>
+Output: 4x \<mcitem\>techreborn:bauxite_dust\</mcitem\>, 1x \<mcitem\>techreborn:aluminum_dust\</mcitem\>
