--- a/docs/blocks/machines/rolling_machine.mdx
+++ b/docs/blocks/machines/rolling_machine.mdx
@@ -21,8 +21,8 @@ The **Rolling Machine** is used to produce various coils, and vanilla items such
 **Rolling Machine** has the following recipes:  
 <CraftingTable recipe="input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot input techreborn:copper_ingot air techreborn:copper_ingot input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot output techreborn:cupronickel_heating_coil,3 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input air techreborn:nickel_ingot air input techreborn:nickel_ingot techreborn:chrome_ingot techreborn:nickel_ingot input air techreborn:nickel_ingot air output techreborn:nichrome_heating_coil,2 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input techreborn:refined_iron_ingot techreborn:refined_iron_ingot techreborn:refined_iron_ingot input techreborn:chrome_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot input techreborn:chrome_ingot techreborn:chrome_ingot techreborn:aluminium_ingot output techreborn:kanthal_heating_coil,3 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input techreborn:aluminium_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminium_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot output techreborn:magnalium_plate,3 tool techreborn:rolling_machine" />
+<CraftingTable recipe="input techreborn:refined_iron_ingot techreborn:refined_iron_ingot techreborn:refined_iron_ingot input techreborn:chrome_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:chrome_ingot techreborn:chrome_ingot techreborn:aluminum_ingot output techreborn:kanthal_heating_coil,3 tool techreborn:rolling_machine" />
+<CraftingTable recipe="input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot output techreborn:magnalium_plate,3 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot minecraft:stick minecraft:iron_ingot input minecraft:iron_ingot air minecraft:iron_ingot output minecraft:rail,24 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input minecraft:gold_ingot air minecraft:gold_ingot input minecraft:gold_ingot minecraft:stick minecraft:gold_ingot input minecraft:gold_ingot minecraft:redstone minecraft:gold_ingot output minecraft:golden_rail,8 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot minecraft:stone_pressure_plate minecraft:iron_ingot input minecraft:iron_ingot minecraft:redstone minecraft:iron_ingot output minecraft:detector_rail,8 tool techreborn:rolling_machine" />
