--- a/docs/dev/wiki.mdx
+++ b/docs/dev/wiki.mdx
@@ -59,7 +59,7 @@ Here's a list of custom components and how to use them.
 The base of most item references. If you want to refer to an item in your page, you should probably be using this tag. It brings in an image and automatically does some other nice things too (hopefully).
 
 ```
-<McItem slug="aluminium_ingot" pack="techreborn"/> 
+<McItem slug="aluminum_ingot" pack="techreborn"/> 
 ```
 
 The `slug` is the name of the file in `/static/imgs/techreborn/` without the file extension. We also use the slug to find the correct page in the index and to render the friendly name of the item. Slug can also be the old format of pack:slug instead of passing the pack on its own.
@@ -79,7 +79,7 @@ If you use VSCode, you can use find and replace with regex and simplify this ins
 This is largely meant to take recipes from the previous generation of wiki and display them in a somewhat nice interface.
 
 ```
-<CraftingTable recipe="input techreborn:aluminium_nugget techreborn:aluminium_nugget techreborn:aluminium_nugget input techreborn:aluminium_nugget techreborn:aluminium_nugget techreborn:aluminium_nugget input techreborn:aluminium_nugget techreborn:aluminium_nugget techreborn:aluminium_nugget output techreborn:aluminium_ingot" />
+<CraftingTable recipe="input techreborn:aluminum_nugget techreborn:aluminum_nugget techreborn:aluminum_nugget input techreborn:aluminum_nugget techreborn:aluminum_nugget techreborn:aluminum_nugget input techreborn:aluminum_nugget techreborn:aluminum_nugget techreborn:aluminum_nugget output techreborn:aluminum_ingot" />
 ```
 
 The `recipe` is meant to be a drop in replacement for the previous version of the wiki, but this doesn't mean you can't handwrite a recipe. I'm showing a broken down example below, but when you do it for real, use spaces between your items, not newlines.
