--- a/docs/items/dusts/bauxite_dust.mdx
+++ b/docs/items/dusts/bauxite_dust.mdx
@@ -6,7 +6,7 @@ title: Bauxite Dust
 
 # Bauxite Dust
 
-**Bauxite Dust** is a dust added by TechReborn. It is used to produce <McItem slug="techreborn:aluminium_dust" inline={true}/> in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>.
+**Bauxite Dust** is a dust added by TechReborn. It is used to produce <McItem slug="techreborn:aluminum_dust" inline={true}/> in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>.
 
 ## Recipe
 
@@ -17,7 +17,7 @@ title: Bauxite Dust
 
 <McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
 <McItem slug="techreborn:bauxite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
-4x <McItem slug="techreborn:bauxite_dust" inline={true}/> + <McItem slug="techreborn:aluminium_dust" inline={true}/>
+4x <McItem slug="techreborn:bauxite_dust" inline={true}/> + <McItem slug="techreborn:aluminum_dust" inline={true}/>
 
 ## Usage
 
@@ -25,7 +25,7 @@ title: Bauxite Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 12x <McItem slug="techreborn:bauxite_dust" inline={true}/> + 8x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-8x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+8x <McItem slug="techreborn:aluminum_dust" inline={true}/> +  
 2x <McItem slug="techreborn:small_pile_of_titanium_dust" inline={true}/> +  
 5x <McItem slug="techreborn:hydrogen_cell" inline={true}/> +  
 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
