--- a/docs/items/dusts/emerald_dust.mdx
+++ b/docs/items/dusts/emerald_dust.mdx
@@ -30,5 +30,5 @@ title: Emerald Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 29x <McItem slug="techreborn:emerald_dust" inline={true}/> + 18x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:beryllium_cell" inline={true}/> +  
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:beryllium_cell" inline={true}/> +  
 6x <McItem slug="techreborn:silicon_cell" inline={true}/> + 9x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
