--- a/docs/items/dusts/grossular_dust.mdx
+++ b/docs/items/dusts/grossular_dust.mdx
@@ -23,7 +23,7 @@ title: Grossular Dust
 **Grossular Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
 20x <McItem slug="techreborn:grossular_dust" inline={true}/> + 12x <McItem slug="techreborn:empty_cell" inline={true}/> →  
 3x <McItem slug="techreborn:calcium_cell" inline={true}/> +  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> +  
 3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
 
