--- a/docs/items/dusts/manganese_dust.mdx
+++ b/docs/items/dusts/manganese_dust.mdx
@@ -15,7 +15,7 @@ title: Manganese Dust
 
 <McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
 20x <McItem slug="techreborn:spessartine_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:manganese_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:manganese_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
 
 ## Usage
 
