--- a/docs/items/fluids/beryllium_cell.mdx
+++ b/docs/items/fluids/beryllium_cell.mdx
@@ -11,7 +11,7 @@ The **Beryllium Cell** is a fluid cell added by TechReborn. You can get by using
 **Beryllium Cell** could be crafted either in Industrial Electorlyzer or in Fluid Replicator.
 
 \<mcitem\>techreborn:industrial_electrolyzer\</mcitem\> recipe:\
-29x\<mcitem\>techreborn:emerald_dust\</mcitem\> + 18x\<mcitem\>techreborn:empty_cell\</mcitem\> -\> 2x\<mcitem\>techreborn:aluminium_dust\</mcitem\> + 3x\<mcitem\>techreborn:beryllium_cell\</mcitem\> + 6x\<mcitem\>techreborn:silicon_cell\</mcitem\> + 9x\<mcitem\>techreborn:compressed_air_cell\</mcitem\>\
+29x\<mcitem\>techreborn:emerald_dust\</mcitem\> + 18x\<mcitem\>techreborn:empty_cell\</mcitem\> -\> 2x\<mcitem\>techreborn:aluminum_dust\</mcitem\> + 3x\<mcitem\>techreborn:beryllium_cell\</mcitem\> + 6x\<mcitem\>techreborn:silicon_cell\</mcitem\> + 9x\<mcitem\>techreborn:compressed_air_cell\</mcitem\>\
 16x\<mcitem\>techreborn:ender_pearl_dust\</mcitem\> + 16x\<mcitem\>techreborn:empty_cell\</mcitem\> -\> 5x\<mcitem\>techreborn:nitrogen_cell\</mcitem\> + \<mcitem\>techreborn:beryllium_cell\</mcitem\> + 4x\<mcitem\>techreborn:potassium_cell\</mcitem\> + 6x\<mcitem\>techreborn:chlorite_cell\</mcitem\>\
 
 <McItem slug="techreborn:fluid_replicator"/> recipe:\
