--- a/docs/items/fluids/lithium_cell.mdx
+++ b/docs/items/fluids/lithium_cell.mdx
@@ -10,12 +10,12 @@ The **Lithium Cell** is a fluid cell added by TechReborn. It is used to create <
 ## Recipe
 
 \<mcitem\>techreborn:industrial_electrolyzer\</mcitem\> recipe:\
-8x \<mcitem\>techreborn:clay_dust\</mcitem\> + \<mcitem\>techreborn:empty_cell\</mcitem\> -\> \<mcitem\>techreborn:lithium_cell\</mcitem\> + 2x \<mcitem\>techreborn:silicon_cell\</mcitem\> + 2x \<mcitem\>techreborn:sodium_cell\</mcitem\> + 2x \<mcitem\>techreborn:aluminium_dust\</mcitem\>
+8x \<mcitem\>techreborn:clay_dust\</mcitem\> + \<mcitem\>techreborn:empty_cell\</mcitem\> -\> \<mcitem\>techreborn:lithium_cell\</mcitem\> + 2x \<mcitem\>techreborn:silicon_cell\</mcitem\> + 2x \<mcitem\>techreborn:sodium_cell\</mcitem\> + 2x \<mcitem\>techreborn:aluminum_dust\</mcitem\>
 
 ## Usage
 
 \<mcitem\>techreborn:assembling_machine\</mcitem\> recipes:\
-2x \<mcitem\>techreborn:aluminium_plate\</mcitem\> + 2x \<mcitem\>techreborn:lithium_cell\</mcitem\> -\> \<mcitem\>techreborn:lithium_ion_battery\</mcitem\>
+2x \<mcitem\>techreborn:aluminum_plate\</mcitem\> + 2x \<mcitem\>techreborn:lithium_cell\</mcitem\> -\> \<mcitem\>techreborn:lithium_ion_battery\</mcitem\>
 
 \<mcitem\>techreborn:fusion_reactor\</mcitem\> recipe:\
 \<mcitem\>techreborn:wolframium_cell\</mcitem\> + \<mcitem\>techreborn:lithium_cell\</mcitem\> -\> \<mcitem\>techreborn:iridium_ore\</mcitem\>
