update the ingot section with new machine components

--- a/docs/items/ingots/advanced_alloy_ingot.mdx
+++ b/docs/items/ingots/advanced_alloy_ingot.mdx
@@ -17,7 +17,7 @@ title: Advanced Alloy Ingot
 
 ### Smelting Recipe
 
-\<recipe\> size 1x1 input techreborn:mixed_metal_ingot output techreborn:advanced_alloy_ingot tool techreborn:iron_furnace \</recipe\>
+<Machine recipe="input techreborn:mixed_metal_ingot output techreborn:advanced_alloy_ingot tool techreborn:iron_furnace" />
 
 ## Usage
 
@@ -30,4 +30,4 @@ title: Advanced Alloy Ingot
 
 ### Compressor Recipe
 
-\<recipe\> size 1x1 input techreborn:advanced_alloy_ingot output techreborn:advanced_alloy_plate tool techreborn:compressor \</recipe\>
+<Machine recipe="input techreborn:advanced_alloy_ingot output techreborn:advanced_alloy_plate tool techreborn:compressor" />
