--- a/docs/items/ingots/iridium_alloy_ingot.mdx
+++ b/docs/items/ingots/iridium_alloy_ingot.mdx
@@ -20,5 +20,6 @@ title: Iridium Alloy Ingot
 
 #### Implosion Compressor recipe
 
-- <McItem slug="techreborn:iridium_alloy_ingot" inline={true}/> + 8x <McItem slug="minecraft:tnt" inline={true}/> &rarr; <McItem slug="techreborn:iridium_alloy_plate" inline={true}/> + 4x <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
-- <McItem slug="techreborn:iridium_alloy_ingot" inline={true}/> + 2x <McItem slug="minecraft:end_crystal" inline={true}/> &rarr; <McItem slug="techreborn:iridium_alloy_plate" inline={true}/> + 2x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/>
+<Machine next={{input: [{id: "techreborn:iridium_alloy_ingot"}, {id: "minecraft:tnt", qty: 8}], output: [{id: "techreborn:iridium_alloy_plate"}, {id: "techreborn:dark_ashes_dust", qty: 4}], tool: "techreborn:implosion_compressor"}} />
+
+<Machine next={{input: [{id: "techreborn:iridium_alloy_ingot"}, {id: "minecraft:end_crystal", qty: 2}], output: [{id: "techreborn:iridium_alloy_plate"}, {id: "techreborn:ender_eye_small_dust", qty: 2}], tool: "techreborn:implosion_compressor"}} />
