--- a/docs/items/ingots/tungstensteel_ingot.mdx
+++ b/docs/items/ingots/tungstensteel_ingot.mdx
@@ -13,8 +13,7 @@ title: Tungstensteel Ingot
 <CraftingTable recipe="input techreborn:tungstensteel_nugget techreborn:tungstensteel_nugget techreborn:tungstensteel_nugget input techreborn:tungstensteel_nugget techreborn:tungstensteel_nugget techreborn:tungstensteel_nugget input techreborn:tungstensteel_nugget techreborn:tungstensteel_nugget techreborn:tungstensteel_nugget output techreborn:tungstensteel_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:tungstensteel_storage_block air input air air air output techreborn:tungstensteel_ingot,9"/>
 
-<McItem slug="techreborn:vacuum_freezer" inline={true}/> recipe:  
-\<recipe\> size 1x1 input techreborn:hot_tungstensteel_ingot output techreborn:tungstensteel_ingot tool techreborn:vacuum_freezer \</recipe\>
+<Machine recipe="input techreborn:hot_tungstensteel_ingot output techreborn:tungstensteel_ingot tool techreborn:vacuum_freezer" />
 
 ## Usage
 
@@ -22,10 +21,9 @@ title: Tungstensteel Ingot
 
 **Tungstensteel Ingot** is used in the following recipes:
 
-- <McItem slug="techreborn:tungstensteel_nugget" inline={true}/>
-- <McItem slug="techreborn:tungstensteel_storage_block" inline={true}/>
-- <McItem slug="techreborn:iridium_reinforced_tungstensteel_storage_block" inline={true}/>
-- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+- <McItem slug="techreborn:tungstensteel_nugget"/>
+- <McItem slug="techreborn:tungstensteel_storage_block"/>
+- <McItem slug="techreborn:iridium_reinforced_tungstensteel_storage_block"/>
+- <McItem slug="techreborn:mixed_metal_ingot"/>
 
-<McItem slug="techreborn:compressor" inline={true}/> recipe:  
-\<recipe\> size 1x1 input techreborn:tungstensteel_ingot output techreborn:tungstensteel_plate tool techreborn:compressor \</recipe\>
+<Machine recipe="input techreborn:tungstensteel_ingot output techreborn:tungstensteel_plate tool techreborn:compressor" />
