--- a/docs/items/ingots/iridium_ingot.mdx
+++ b/docs/items/ingots/iridium_ingot.mdx
@@ -13,8 +13,7 @@ title: Iridium Ingot
 <CraftingTable recipe="input techreborn:iridium_nugget techreborn:iridium_nugget techreborn:iridium_nugget input techreborn:iridium_nugget techreborn:iridium_nugget techreborn:iridium_nugget input techreborn:iridium_nugget techreborn:iridium_nugget techreborn:iridium_nugget output techreborn:iridium_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:iridium_storage_block air input air air air output techreborn:iridium_ingot,9"/>
 
-<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
-Recipe requires 2000 heat. size 1x2 input techreborn:raw_iridium air output techreborn:iridium_ingot tool techreborn:blast_furnace 
+<Machine recipe="input techreborn:raw_iridium air output techreborn:iridium_ingot tool techreborn:blast_furnace" />
 
 ## Usage
 
@@ -22,10 +21,10 @@ Recipe requires 2000 heat. size 1x2 input techreborn:raw_iridium air output tech
 
 **Iridium Ingot** used in several crafting recipes:
 
-- <McItem slug="techreborn:iridium_nugget" inline={true}/>
-- <McItem slug="techreborn:iridium_storage_block" inline={true}/>
-- <McItem slug="techreborn:iridium_neutron_reflector" inline={true}/>
-- <McItem slug="techreborn:data_storage_chip" inline={true}/>
-- <McItem slug="techreborn:lapotronic_orbpack" inline={true}/>
+- <McItem slug="techreborn:iridium_nugget"/>
+- <McItem slug="techreborn:iridium_storage_block"/>
+- <McItem slug="techreborn:iridium_neutron_reflector"/>
+- <McItem slug="techreborn:data_storage_chip"/>
+- <McItem slug="techreborn:lapotronic_orbpack"/>
 
-\<mcitem\>techreborn:compressor\</mcitem\> recipe: \<recipe\> size 1x1 input techreborn:iridium_ingot output techreborn:iridium_plate tool techreborn:compressor \</recipe\>
+<Machine recipe="input techreborn:iridium_ingot output techreborn:iridium_plate tool techreborn:compressor" />
