--- a/docs/items/ingots/titanium_ingot.mdx
+++ b/docs/items/ingots/titanium_ingot.mdx
@@ -12,10 +12,9 @@ title: Titanium Ingot
 
 <CraftingTable recipe="input techreborn:titanium_nugget techreborn:titanium_nugget techreborn:titanium_nugget input techreborn:titanium_nugget techreborn:titanium_nugget techreborn:titanium_nugget input techreborn:titanium_nugget techreborn:titanium_nugget techreborn:titanium_nugget output techreborn:titanium_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:titanium_storage_block air input air air air output techreborn:titanium_ingot,9"/>
-<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
-Recipe requires 1500 heat.  
-\<recipe\> size 1x2 input techreborn:titanium_small_dust,4 air output techreborn:titanium_ingot tool techreborn:blast_furnace \</recipe\>\
-\<recipe\> size 1x2 input techreborn:titanium_dust air output techreborn:titanium_ingot tool techreborn:blast_furnace \</recipe\>
+
+<Machine recipe="input techreborn:titanium_small_dust,4 air output techreborn:titanium_ingot tool techreborn:blast_furnace" />
+<Machine recipe="input techreborn:titanium_dust air output techreborn:titanium_ingot tool techreborn:blast_furnace" />
 
 ## Usage
 
@@ -23,14 +22,13 @@ Recipe requires 1500 heat.
 
 **Titanium Ingot** used in several crafting recipes:
 
-- <McItem slug="techreborn:titanium_nugget" inline={true}/>
-- <McItem slug="techreborn:titanium_storage_block" inline={true}/>
-- <McItem slug="techreborn:advanced_jackhammer" inline={true}/>
-- <McItem slug="techreborn:advanced_drill" inline={true}/>
-- <McItem slug="techreborn:advanced_chainsaw" inline={true}/>
-- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+- <McItem slug="techreborn:titanium_nugget"/>
+- <McItem slug="techreborn:titanium_storage_block"/>
+- <McItem slug="techreborn:advanced_jackhammer"/>
+- <McItem slug="techreborn:advanced_drill"/>
+- <McItem slug="techreborn:advanced_chainsaw"/>
+- <McItem slug="techreborn:mixed_metal_ingot"/>
 
-<McItem slug="techreborn:compressor"/> recipe: \<recipe\> size 1x1 input techreborn:titanium_ingot output techreborn:titanium_plate tool techreborn:compressor \</recipe\>
+<Machine recipe="input techreborn:titanium_ingot output techreborn:titanium_plate tool techreborn:compressor" />
 
-\
-<McItem slug="techreborn:grinder"/> recipe: \<recipe\> size 1x1 input techreborn:titanium_ingot output techreborn:titanium_dust tool techreborn:grinder \</recipe\>
+<Machine recipe="input techreborn:titanium_ingot output techreborn:titanium_dust tool techreborn:grinder" />
